<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--    Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_prev_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:icon="@drawable/arrow_left"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black"
            app:tint="@color/black"
            android:contentDescription="@string/previous_month_description"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/monthAndYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/default_monthAndYear_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendar_next_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="16dp"
            app:icon="@drawable/arrow_right"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black"
            app:tint="@color/black"
            android:contentDescription="@string/next_month_description"/>


    </LinearLayout>

    <!--    Daily Moods -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dailyMoods"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/daily_moods"
        app:icon="@drawable/arrow_drop_down"
        app:iconTint="@color/mint"
        android:textColor="@color/mint"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- days header -->
    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Sunday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Monday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Tuesday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Wednesday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Thursday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Friday"
            android:textColor="#222222" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Saturday"
            android:textColor="#222222" />

    </LinearLayout>

    <!-- days view -->

    <!-- Mood Legend -->
    <GridView
        android:id="@+id/calendar_grid"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:numColumns="7"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:id="@+id/mood_legend"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">

        <!-- Happy -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/happy_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/happy_calendar_choice"
                android:src="@drawable/happy_icon" />

            <TextView
                android:id="@+id/count_happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_happy_choice"
                android:textColor="#222222" />
        </LinearLayout>

        <!-- Good -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/good_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/good_calendar_choice"
                android:src="@drawable/good_icon" />

            <TextView
                android:id="@+id/count_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_good_choice"
                android:textColor="#222222" />
        </LinearLayout>

        <!-- Neutral -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/neutral_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/neutral_calendar_choice"
                android:src="@drawable/neutral_icon" />

            <TextView
                android:id="@+id/count_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_neutral_choice"
                android:textColor="#222222" />
        </LinearLayout>

        <!-- Bad -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bad_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/bad_calendar_choice"
                android:src="@drawable/bad_icon" />

            <TextView
                android:id="@+id/count_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_bad_choice"
                android:textColor="#222222" />
        </LinearLayout>

        <!-- Worst -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/worst_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/worst_calendar_choice"
                android:src="@drawable/worst_icon" />

            <TextView
                android:id="@+id/count_worst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_worst_choice"
                android:textColor="#222222" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="289dp"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title-->
        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="8dp"
            android:text="@string/calendar_notes"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emptyNotesMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/note_table_border"
            android:gravity="center"
            android:text="@string/no_notes_yet"
            android:textAlignment="center"
            android:textColor="@color/light_gray"
            android:textSize="17sp"
            android:visibility="gone" />

        <!-- RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/note_table_border"
            android:fadeScrollbars="false"
            android:overScrollMode="always"
            android:scrollbars="vertical" />
    </LinearLayout>

</LinearLayout>