<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarApp"
    android:layout_marginTop="30dp">

    <com.example.diamonds.CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/notesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/calendar_notes"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.example.diamonds.CalendarView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calendarSettingsBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/calendar_settings"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/settings_icon_calendar"
        app:iconTint="#6D6B6B"
        app:layout_constraintBottom_toTopOf="@+id/calendar_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toEndOf="@+id/micCalendarButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/micCalendarButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="84dp"
        android:contentDescription="@string/speak_calendar_operation"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/mic_icon"
        app:iconTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/calendar_view"
        app:layout_constraintStart_toEndOf="@+id/homeCalendarButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homeCalendarButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:contentDescription="@string/speak_calendar_operation"
        app:backgroundTint="@android:color/transparent"
        app:icon="@drawable/arrow_back_icon"
        app:iconTint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/calendar_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>